* 2007-10-11 - thorben.betten@open-xchange.com

 - Bugfix #9756: Fallback implementation if UID EXPUNGE is not supported by
   IMAP server

* 2007-10-11 - martin.kauss@open-xchange.com

 - Fixed bug #7471. If an existing exception is deleted with the
   update method and the field delete_exception then this exeption
   was just marked as deleted exception without a real delete.
   This has been fixed.
   
  - Removed unused imports

  - Fixed bug #9599. By adding a new users the confirm message was
    deleted for existing users. This has been fixed.

* 2007-10-10 - thorben.betten@open-xchange.com

 - Bugfix #9751: Fixed non-appearing shared mail folders
 - Bugfix #9750: Avoid annoying error logging whenever an ACL entity cannot
   be mapped to system user
 - Bugfix #9719: Returning proper instance of FolderObjectIterator
 - Bugfix #9733: More informative error message if no folder admin specified

* 2007-09-17 - thorben.betten@open-xchange.com

 - Bugfix #9664: Fixed check for IMAP server's user flag support
 - Bugfix #9699: Fixed update of IMAP folder's ACLs

* 2007-09-17 - martin.kauss@open-xchange.com

 - Fixed bug #9497. Recurring appointments with a start before 1970 caused a
   NullPointer by viewing the detail page of a single occurrence. This has been
   fixed.

* 2007-09-17 - marcus.klein@open-xchange.com

 - Bugfix #9475: Improved VCardTokenizer to use byte arrays instead of Byte
   lists.

* 2007-09-14 - ben.pahne@open-xchange.com

 - Fixed Bug #9466 - User was able to move his
   contact out of the global address book.

* 2007-09-13 - marcus.klein@open-xchange.com

 - Bugfix #8935: Fixing once again another case breaking AJAX communication.
 - Bugfix #9445: Added handling for folders that are only visible.

* 2007-09-13 - ben.pahne@open-xchange.com

 - Fixed Bug #6335 - Check for bad characters impletemented

* 2007-09-12 - marcus.klein@open-xchange.com

 - Bugfix #9409: Reimplemented bugfix for bug 8935 to prevent this problem.
